Update action management app